// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component default 1`] = `
.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px 20px 12px 0;
  line-height: 20px;
}

.c0 {
  list-style: none;
  padding: 0;
  margin: 0;
  box-shadow: 0 1px 4px rgba(0,0,0,0.22);
  display: inline-block;
  box-sizing: border-box;
  min-width: 16rem;
}

.c1 {
  padding-left: 8px;
  border-left: 2px solid rgba(255,255,255,1);
  background-color: rgba(255,255,255,1);
  outline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  cursor: pointer;
}

.c1:not(:last-child) .c2 {
  border-bottom: 1px solid rgba(229,229,229,1);
}

<ul
  class="c0"
>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
</ul>
`;

exports[`List component with icon 1`] = `
.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px 20px 12px 0;
  line-height: 20px;
}

.c0 {
  list-style: none;
  padding: 0;
  margin: 0;
  box-shadow: 0 1px 4px rgba(0,0,0,0.22);
  display: inline-block;
  box-sizing: border-box;
  min-width: 16rem;
}

.c1 {
  padding-left: 8px;
  border-left: 2px solid rgba(255,255,255,1);
  background-color: rgba(255,255,255,1);
  outline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  cursor: pointer;
}

.c1:not(:last-child) .c3 {
  border-bottom: 1px solid rgba(229,229,229,1);
}

.c2 {
  margin-top: 12px;
  margin-right: 10px;
}

<ul
  class="c0"
>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    >
      
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    >
      
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    >
      
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    >
      
    </div>
  </li>
</ul>
`;
